# spring23-datacurrentsea

./: .gitignore  README.md
.github/workflows/: tests.yml
lab1/lab1/src/: main.py
lab_1/: README.md
lab_1/lab1/: Dockerfile  pyproject.toml  run.sh
lab_2/: run.sh
lab_2/lab2/: Dockerfile  pyproject.toml
lab_2/lab2/src/: main.py
lab_2/lab2/tests/: test_lab2.py
lab_3/: clean.sh
lab_3/lab3/: Dockerfile  README.md  pyproject.toml
lab_3/lab3/infra/: service-prediction.yaml  service-redis.yaml
lab_3/lab3/src/: main.py
lab_3/lab3/tests/: test_lab2.py  test_lab3.py
lab_4/: build-push.sh  run.sh
lab_4/lab4/: README.md
lab_4/lab4/.k8s/bases/: deployment-lab4.yaml  kustomization.yaml
lab_4/lab4/.k8s/overlays/dev/: patch-deployment-lab4.yaml
lab_4/lab4/.k8s/overlays/prod/: kustomization.yaml  patch-deployment-lab4.yaml  patch-deployment-lab4_copy.yaml  virtual-service.yaml
lab_4/lab4/infra/: deployment-pythonapi.yaml  deployment-redis.yaml
lab_4/lab4/src/: main.py
lab_4/lab4/trainer/: predict.py
lab_5/: Findings.md  load.js
project/: README.md  build-push.sh  load.js
project/.k8s/bases/: deployment-project.yaml  kustomization.yaml
project/.k8s/overlays/dev/: kustomization.yaml
project/.k8s/overlays/prod/: kustomization.yaml  patch-deployment-project.yaml  patch-deployment-project_copy.yaml  virtual-service.yaml
project/mlapi/: Dockerfile
project/mlapi/src/: main.py
project/mlapi/tests/: test_mlapi.py
